# illust-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
crawler/: items.py  pipelines.py  settings.py
crawler/spiders/: pixiv_spider.py
database/: db.py  models.py
